[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Sergey Degtyar <sergeydegtyar@internet.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.35.0"
flet = "^0.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
